style the pizza submit form

--- a/src/components/AddPizzaForm.css
+++ b/src/components/AddPizzaForm.css
@@ -1,5 +1,4 @@
 .pizzaForm-container {
-    border: 1px solid red;
     width: 100%;
 }
 
@@ -11,5 +10,18 @@
     gap: 12px;
     align-items: center;
     justify-content: center;
-    border: 1px solid green;
+    margin-top: 20px;
+}
+
+form input[type="text"] {
+    padding-left: 10px;
+    padding: 5px;
+}
+
+form input[type="submit"] {
+    background-color: green;
+    margin-left: 10px;
+    padding: 5px;
+    color: #fff;
+    border-radius: 5px;
 }
