--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
+* {
+  top: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App h1 {
+  margin-top: 20px;
   font-size: 30px;
   font-family: sans-serif;
   font-weight: bold;
