--- a/src/components/PizzaTable.css
+++ b/src/components/PizzaTable.css
@@ -1,11 +1,9 @@
 .pizzaTable-container {
-    border: 1px solid red;
     width: 100%;
 }
 
 .pizzaTable-container table {
     width: 70%;
-    border: 1px solid green;
     margin: 0 auto;
     margin-top: 10px;
 }
@@ -18,4 +16,5 @@ table .edit-button {
 table td,
 th {
     text-align: center;
+    padding-top: 10px;
 }
